--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -61,6 +61,7 @@
                   <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru</a>
               </div>
             </div>
 
