--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
@@ -89,6 +89,7 @@
                   </select>
                 </div>
               </div>
+              </div>
               <!--input 8-->
               <!--input 9-->
               <div class="form-group row">
