--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -6,46 +6,44 @@
       <div class="card-body">
         <h5>Pencarian Nasabah</h5>
 
-        <mdb-card>
+        <mdb-card class="mb-3">
           <mdb-card-body>
             <!--input 1-->
             <div class="form-group row ">
               <label class="col-2 col-form-label  font-weight-bold">Pilih Kriteria</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3 custom-control custom-radio">
+              <div class="col-3 pt-2">
                 <!-- Default checked -->
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios"
+                  <input type="radio" class="custom-control-input" id="defaultUnchecked1" name="defaultExampleRadios"
+                  checked mdbInputDirective>
+                  <label class="custom-control-label" for="defaultUnchecked1">Kode Nasabah</label>
+                </div>
+                <!-- Default unhecked -->
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="defaultChecked2" name="defaultExampleRadios"
                     mdbInputDirective>
-                  <label class="custom-control-label" for="defaultUnchecked">Kode Nasabah</label>
-                </div>
-
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultUnChecked" name="defaultExampleRadios"
-                    checked mdbInputDirective>
-                  <label class="custom-control-label" for="defaultChecked">Kode Cabang</label>
+                  <label class="custom-control-label" for="defaultChecked2">Kode Cabang</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultUnChecked" name="defaultExampleRadios"
-                    checked mdbInputDirective>
-                  <label class="custom-control-label" for="defaultChecked">No Kartu Identitas</label>
+                  <input type="radio" class="custom-control-input" id="defaultChecked3" name="defaultExampleRadios"
+                    mdbInputDirective>
+                  <label class="custom-control-label" for="defaultChecked3">No Kartu Identitas</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultUnChecked" name="defaultExampleRadios"
-                    checked mdbInputDirective>
-                  <label class="custom-control-label" for="defaultChecked">Alamat</label>
+                  <input type="radio" class="custom-control-input" id="defaultChecked4" name="defaultExampleRadios"
+                    mdbInputDirective>
+                  <label class="custom-control-label" for="defaultChecked4">Alamat</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultUnChecked" name="defaultExampleRadios"
-                    checked mdbInputDirective>
-                  <label class="custom-control-label" for="defaultChecked">Nama Nasabah +</label>
+                  <input type="radio" class="custom-control-input" id="defaultChecked5" name="defaultExampleRadios"
+                    mdbInputDirective>
+                  <label class="custom-control-label" for="defaultChecked5">Nama Nasabah</label>
                 </div>
-                <span class="col-1"></span>
-
               </div>
-              <span class="col-6"></span>
+              <span class="col-2"></span>
             </div>
-
+            <!--input 1-->
             <!--input 2-->
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Masukkan Nilai</label>
