--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -45,7 +45,7 @@
           <!--panel 2-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-hover">
+              <table class="table table-hover border">
                 <thead class="grey lighten-2">
                   <tr class="font-weight-bold">
                     <th scope="col">Tanggal</th>
@@ -103,16 +103,16 @@
             <nav aria-label="Page navigation example">
               <ul class="pagination pg-blue">
                 <li class="page-item">
-                  <a class="page-link" aria-label="Previous">
-                    <span aria-hidden="true">&laquo; Sebelumnya</span>
+                  <a class="page-link">
+                    <span >&laquo; Sebelumnya</span>
                   </a>
                 </li>
                 <li class="page-item"><a class="page-link">1</a></li>
                 <li class="page-item"><a class="page-link">2</a></li>
                 <li class="page-item"><a class="page-link">3</a></li>
                 <li class="page-item">
-                  <a class="page-link" aria-label="Next">
-                    <span aria-hidden="true">&raquo; Selanjutnya</span>
+                  <a class="page-link">
+                    <span >&raquo; Selanjutnya</span>
                   </a>
                 </li>
               </ul>
