--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -108,8 +108,8 @@
         <!--Panel Tabs-->
 
         <!-- isi konten panel tabs tabungan-->
-        <mdb-card>
-          <mdb-card-body>
+        <div class="card">
+          <div class="card-body">
             <div class="tab-content">
               <!--isi tab data administrasi-->
               <div *ngIf="kontenTabungan[0]" role="tabpanel" class="tab-pane active">
@@ -143,8 +143,8 @@
               
               <div *ngIf="kontenTabungan[5]" role="tabpanel" class="tab-pane active">isi 6 </div>
             </div>
-          </mdb-card-body>
-        </mdb-card>
+          </div>
+        </div>
         <!-- isi konten panel tabs-->
 
       </div>
