--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -61,8 +61,8 @@
           <!--Panel Tabs-->
 
           <!--Panel isi konten dari menu tabs-->
-          <mdb-card>
-            <mdb-card-body>
+          <div class="card">
+            <div class="card-body">
               <div class="tab-content">
 
                 <!--Panel isi konten dari tab informasi -->
@@ -83,8 +83,8 @@
                   <!--button menu pada tab informasi-->
 
                   <!--panel isi konten data umum cif-->
-                  <mdb-card>
-                    <mdb-card-body>
+                  <div class="card">
+                    <div class="card-body">
                       <div *ngIf="konten1[0]" role="tabpanel" class="tab-pane active">
                         <app-data-umum-nasabah *ngIf="editData" [editData]="editData" (editDataEvent)="statusEdit($event)"></app-data-umum-nasabah>
                         <app-edit-data-umum-nasabah *ngIf="!editData" [editData]="editData" (editDataEvent)="statusEdit($event)"></app-edit-data-umum-nasabah>
@@ -118,8 +118,8 @@
                           <app-ubah-data-tambahan *ngIf="!editDataTambahan" (editDataTambahanEvent)="statusEditDataTambahan($event)"></app-ubah-data-tambahan>
                       </div>
                       <!--panel isi data tambahan-->
-                    </mdb-card-body>
-                  </mdb-card>
+                    </div>
+                  </div>
                 </div>
                 <!--end panel isi konten data umum cif-->
 
@@ -130,8 +130,8 @@
                 <div *ngIf="konten[3]" role="tabpanel" class="tab-pane active" id="one">Konten Tab Alamat Tambahan</div>
                 <div *ngIf="konten[4]" role="tabpanel" class="tab-pane active" id="one">Konten Tab Pesan</div>
               </div>
-            </mdb-card-body>
-          </mdb-card>
+            </div>
+          </div>
           <!--Panel isi konten dari menu tabs-->
 
           <!-- Default form contact -->
