update riwayat saldo

--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -7,8 +7,8 @@
         <div class="card-body">
 
           <!--Panel Atas 1-->
-          <mdb-card class="mb-3">
-            <mdb-card-body>
+          <div class="card mb-3">
+            <div class="card-body">
 
               <div class="row">
                 <label class="col-2 font-weight-bold">Nama Nasabah</label>
@@ -40,8 +40,8 @@
                 <label class="col-3">CS</label>
               </div>
 
-            </mdb-card-body>
-          </mdb-card>
+            </div>
+          </div>
           <!--Panel Atas 1-->
 
 
