--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -140,8 +140,11 @@
                 <app-bunga-jasa-giro></app-bunga-jasa-giro>  
               </div>
               <!--isi tab data bunga jas giro -->
-              
-              <div *ngIf="kontenTabungan[5]" role="tabpanel" class="tab-pane active">isi 6 </div>
+              <!-- isi tab riwayat saldo -->
+              <div *ngIf="kontenTabungan[5]" role="tabpanel" class="tab-pane active">
+                  <app-riwayat-saldo></app-riwayat-saldo> 
+              </div>
+              <!-- isi tab riwayat saldo -->
             </div>
           </div>
         </div>
