--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/bunga-jasa-giro/bunga-jasa-giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/bunga-jasa-giro/bunga-jasa-giro.component.html
@@ -61,32 +61,16 @@
         </tr>
       </tbody>
     </table>
-
-
-      <!--Pagination-->
-      <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-          <nav aria-label="Page navigation example">
-            <ul class="pagination pg-blue">
-              <li class="page-item">
-                <a class="page-link">
-                  <span >&laquo; Sebelumnya</span>
-                </a>
-              </li>
-              <li class="page-item"><a class="page-link">1</a></li>
-              <li class="page-item"><a class="page-link">2</a></li>
-              <li class="page-item"><a class="page-link">3</a></li>
-              <li class="page-item">
-                <a class="page-link">
-                  <span >&raquo; Selanjutnya</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!--Pagination-->
-
-
-
+    <div class="d-flex flex-row-reverse mt-2">
+      <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+        <button mdbBtn type="button" color="link" size="sm" class="waves-light">&laquo; Sebelumnya</button>
+        <button mdbBtn type="button" color="link" size="sm" class="waves-light">1</button>
+        <button mdbBtn type="button" color="link" size="sm" class="waves-light">2</button>
+        <button mdbBtn type="button" color="link" size="sm" class="waves-light">3</button>
+        <button mdbBtn type="button" color="link" size="sm" class="waves-light">Selanjutnya &raquo;
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 <!-- table  -->
@@ -95,59 +79,59 @@
 
 <!-- panel bawah -->
 <div class="mt-3">
-<div class="row">
-  <label class="col-3 font-weight-bold">Perioda Bunga s/d Tanggal</label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2 font-weight-bold">12/11/2012</label>
-  <label class="col-3">12/12/2018</label>
-</div>
+  <div class="row">
+    <label class="col-3 font-weight-bold">Perioda Bunga s/d Tanggal</label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2 font-weight-bold">12/11/2012</label>
+    <label class="col-3">12/12/2018</label>
+  </div>
 
-<div class="row">
-  <label class="col-3 ">Yang Di Hitung</label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2 ">12/11/2012</label>
-  <label class="col-3">2.132</label>
-</div>
+  <div class="row">
+    <label class="col-3 ">Yang Di Hitung</label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2 ">12/11/2012</label>
+    <label class="col-3">2.132</label>
+  </div>
 
-<div class="row">
-  <label class="col-3 ">Yang Di Di Bebankan</label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2 ">5.248</label>
-  <label class="col-3">5.293</label>
-</div>
+  <div class="row">
+    <label class="col-3 ">Yang Di Di Bebankan</label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2 ">5.248</label>
+    <label class="col-3">5.293</label>
+  </div>
 
-<div class="row">
-  <label class="col-3 ">Yang Di Cadangkan</label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2 "></label>
-  <label class="col-3">1.968</label>
-</div>
+  <div class="row">
+    <label class="col-3 ">Yang Di Cadangkan</label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2 "></label>
+    <label class="col-3">1.968</label>
+  </div>
 
-<div class="row">
-  <label class="col-3">Adjustment Cadangan Bunga </label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2"></label>
-  <label class="col-3">0.0</label>
-</div>
+  <div class="row">
+    <label class="col-3">Adjustment Cadangan Bunga </label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2"></label>
+    <label class="col-3">0.0</label>
+  </div>
 
-<div class="row">
-  <label class="col-3 ">Bunga Bersih</label>
-  <label class="col-2"></label>
-  <span class="col-2"></span>
-  <label class="col-2 "></label>
-  <label class="col-3">0.0</label>
-</div>
-<div class="row">
-  <label class="col-3">Metode Perhitungan Bunga</label>
-  <label class="col-2"></label>
-  <span class="col-2">11</span>
-  <label class="col-2"></label>
-  <label class="col-3"></label>
-</div>
+  <div class="row">
+    <label class="col-3 ">Bunga Bersih</label>
+    <label class="col-2"></label>
+    <span class="col-2"></span>
+    <label class="col-2 "></label>
+    <label class="col-3">0.0</label>
+  </div>
+  <div class="row">
+    <label class="col-3">Metode Perhitungan Bunga</label>
+    <label class="col-2"></label>
+    <span class="col-2">11</span>
+    <label class="col-2"></label>
+    <label class="col-3"></label>
+  </div>
 </div>
 <!-- panel bawah -->
