--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah-indvl/duplikat-nasabah-indvl.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah-indvl/duplikat-nasabah-indvl.component.html
@@ -46,8 +46,7 @@
             <!--input 4-->
             <!--input 5-->
             <div class="form-group row">
-              <label class="col-2 col-form-label font-weight-bold"></label>
-              <label class="col-form-label pr-0  font-weight-bold"></label>
+              <span class="col-2"></span>
               <div class="col-3"><input type="text" class="form-control"></div>
               <span class="col-6"></span>
             </div>
@@ -140,6 +139,7 @@
                 </div>
             </div>
             <!--input11-->
+            <br><br>
               <div class="d-flex justify-content-center">
                 <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
                 <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
