--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah-indvl/duplikat-nasabah-indvl.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah-indvl/duplikat-nasabah-indvl.component.html
@@ -40,14 +40,15 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Alamat</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
+              <div class="col-4"><input type="text" class="form-control"></div>
               <span class="col-6"></span>
             </div>
             <!--input 4-->
             <!--input 5-->
             <div class="form-group row">
-              <span class="col-2"></span>
-              <div class="col-3"><input type="text" class="form-control"></div>
+              <label class="col-2 col-form-label  font-weight-bold"></label>
+              <label class="col-form-label pr-0  font-weight-bold">&nbsp;</label>
+              <div class="col-4"><input type="text" class="form-control"></div>
               <span class="col-6"></span>
             </div>
             <!--input 5-->
@@ -68,54 +69,54 @@
             </div>
             <!--input 7-->
             <!--input 8-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label  font-weight-bold">Propinsi</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">Jawa Tengah</option>
-                    <option value="2">Jawa Timur</option>
-                  </select>
-                </div>
-                <span class="col-1"></span>
-                <label class="col-2 col-form-label font-weight-bold">Kota</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                    <select class="custom-select" name="optkodempn" id="optkodempn">
-                      <option selected>Pilih Salah Satu</option>
-                      <option value="1">Semararng</option>
-                      <option value="2">Surabaya</option>
-                    </select>
-                </div>
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Propinsi</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Jawa Tengah</option>
+                  <option value="2">Jawa Timur</option>
+                </select>
               </div>
-              <!--input 8-->
-              <!--input 9-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label  font-weight-bold">NPWP</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input type="text" class="form-control"></div>
-                <span class="col-6"></span>
+              <span class="col-1"></span>
+              <label class="col-2 col-form-label font-weight-bold">Kota</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Semararng</option>
+                  <option value="2">Surabaya</option>
+                </select>
               </div>
-              <!--input 9-->
-              <!--input 10-->
-              <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold">Jenis Kartu Identitas</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">KTP</option>
-                    <option value="2">SIM</option>
-                  </select>
-                </div>
-                <span class="col-1"></span>
-                <label class="col-2 col-form-label font-weight-bold">No. Kartu Identitas</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input type="text" class="form-control"></div>
+            </div>
+            <!--input 8-->
+            <!--input 9-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">NPWP</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 9-->
+            <!--input 10-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label font-weight-bold">Jenis Kartu Identitas</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">KTP</option>
+                  <option value="2">SIM</option>
+                </select>
               </div>
-              <!--input 10-->
-              <!--input 11-->
+              <span class="col-1"></span>
+              <label class="col-2 col-form-label font-weight-bold">No. Kartu Identitas</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+            </div>
+            <!--input 10-->
+            <!--input 11-->
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Tanggal Lahir</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
@@ -129,21 +130,21 @@
                 </div>
               </div>
               <label class="col-2 col-form-label font-weight-bold">Jenis Kelamin</label>
-                <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-2">
-                  <select class="custom-select" name="optkodempn" id="optkodempn">
-                    <option selected>Pilih Salah Satu</option>
-                    <option value="1">Pria</option>
-                    <option value="2">Wanita</option>
-                  </select>
-                </div>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-2">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
+                  <option selected>Pilih Salah Satu</option>
+                  <option value="1">Pria</option>
+                  <option value="2">Wanita</option>
+                </select>
+              </div>
             </div>
             <!--input11-->
             <br><br>
-              <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-              </div>
+            <div class="d-flex justify-content-center">
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
           </mdb-card-body>
         </mdb-card>
 
