--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,6 +64,7 @@
                   <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru - Corporate</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabahindvl']">Duplikat Cek Nasabah Baru - Individual</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasaba Baru - Corporate</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasaba Baru - Individual</a>
               </div>
             </div>
 
