--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -10,23 +10,37 @@
           <div class="card">
             <div class="card-body">
               <form>
-                <table class="table table-striped table-hover table-bordered" style="height:25px; text-align:center;">
+                <table class="table table-sm table-striped table-hover table-bordered" style="height:25px; text-align:center;">
                   <thead class="thead-light">
                     <tr>
                       <th class="col-form-label pr-0 font-weight-bold" style="width:4%;line-height: 1.2">User ID</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:24%;line-height: 1.2">Nama</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Login Terakhir</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Logout Terakhir</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:20%;line-height: 1.2">Nama</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Login Terakhir</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Logout Terakhir</th>
                       <th class="col-form-label pr-0 font-weight-bold" style="width:8%;line-height: 1.2">Status</th>
-                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Kode Departemen</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:10%;line-height: 1.2">Kode Departemen</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Pilih Proses</th>
                     </tr>
                     <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;" [ngClass]="{odd:oddRecords, even:evenRecords, first : firsRecords, last : lastRecords}">
-                      <td style="line-height: 0.5;">{{record.UserId}}</td>
-                      <td style="line-height: 0.5;text-align:left">{{record.Nama}}</td>
-                      <td style="line-height: 0.5;">{{record.LoginAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                      <td style="line-height: 0.5;">{{record.LogoutAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                      <td style="line-height: 0.5;">{{record.Status}}</td>
-                      <td style="line-height: 0.5;">{{record.KodeDept}}</td>
+                      <td>{{record.UserId}}</td>
+                      <td style="text-align:left">{{record.Nama}}</td>
+                      <td>{{record.LoginAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                      <td>{{record.LogoutAkhir | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                      <td>{{record.Status}}</td>
+                      <td>{{record.KodeDept}}</td>
+                      <td>
+                        <a class="btn-sm" mdbBtn color="default" title="Lihat Data" href="/tabelbarang/view/{{this.id}}">
+                          <span>Lihat</span>
+                        </a>
+                        <span style="margin:3px"></span>
+                        <a class="btn-sm" mdbBtn color="default" title="Rubah Data" href="/tabelbarang/update/{{this.id}}">
+                          <span>Ubah</span>
+                        </a>
+                        <span style="margin:3px"></span>
+                        <a class="btn-sm" mdbBtn color="default" title="Hapus Data" data-toggle="confirmation" href="tabelbarang/delete/{{this.id}}">
+                          <span>Hapus</span>
+                        </a>
+                      </td>
                     </tr>
                   </thead>
                 </table>
