penmabahan data admin

--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -154,7 +154,7 @@
       <!--Panel isi konten dtabs tabungan-->
       <!--Panel isi konten tabs giro-->
       <div *ngIf="konten[1]" role="tabpanel" class="tab-pane active">
-        Konten Giro
+        <app-giro></app-giro>
       </div>
       <!--Panel isi konten tabs giro-->
       <!--Panel isi konten tabs deposito-->
