--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -1,5 +1,5 @@
 <header class="navbar fixed-top">
-  <div class="row w-100 h-100" id="header">
+  <div class="row w-100 h-100 p-0" id="header">
 
     <div style="width: 15%"></div>
 
@@ -26,26 +26,48 @@
     </div>
 
     <div style="width: 12%">
-        <div class="row text-right small" style="position: absolute;bottom: -15px;">
-          <ul style="list-style-type: none; font-size:1vw;">
-            <li></li>
-            <li class="font-weight-bold text-info"></li>
-            <li>Cabang </li>
-            <li class="font-weight-bold text-info">034|Cabang Utama</li>
-          </ul>
-        </div>
+      <div class="row text-right small" style="position: absolute;bottom: -15px;">
+        <ul style="list-style-type: none; font-size:1vw;">
+          <li></li>
+          <li class="font-weight-bold text-info"></li>
+          <li>Cabang </li>
+          <li class="font-weight-bold text-info">034|Cabang Utama</li>
+        </ul>
       </div>
+    </div>
 
-      <div style="width: 12%">
-          <div class="row text-right small" style="position: absolute;bottom: -15px;">
-            <ul style="list-style-type: none; font-size:1vw;">
-              <li></li>
-              <li class="font-weight-bold text-info"></li>
-              <li> </li>
-              <li class="font-weight-bold text-info"><a class="text-muted" (click)="fungsi()"><i class="fa fa-sign-out text-muted" role="button"></i>Sign Out</a></li>
-            </ul>
-          </div>
-        </div>
+    <div style="width: 12%">
+      <div class="row text-right small" style="position: absolute;bottom: -15px;">
+        <ul style="list-style-type: none; font-size:1vw;">
+          <li></li>
+          <li class="font-weight-bold text-info"></li>
+          <li> </li>
+          <li class="font-weight-bold text-info"><a class="text-muted" (click)="fungsi()"><i class="fa fa-sign-out text-muted"
+                role="button"></i>Sign Out</a></li>
+        </ul>
+      </div>
+    </div>
+
+
+    <div style="width: 27%">
+    </div>
+
+    <div style="width: 14%" class="border ">
+      <div class="row text-right" style="position: absolute;top: 30px;">
+        <ul style="list-style-type: none; font-size:1vw;">
+          <li class="text-light">
+            Selamat Datang
+          </li>
+          <li class="font-weight-bold text-info">
+            Jateng SP | Jateng SP
+          </li>
+          <li> </li>
+          <li class="font-weight-bold text-info">
+
+          </li>
+        </ul>
+      </div>
+    </div>
 
   </div>
 </header>
