--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -52,18 +52,14 @@
     <div style="width: 27%">
     </div>
 
-    <div style="width: 14%" class="border ">
+    <div style="width: 14%">
       <div class="row text-right" style="position: absolute;top: 30px;">
         <ul style="list-style-type: none; font-size:1vw;">
           <li class="text-light">
-            Selamat Datang
+           <h6>Selamat Datang</h6> 
           </li>
           <li class="font-weight-bold text-info">
             Jateng SP | Jateng SP
-          </li>
-          <li> </li>
-          <li class="font-weight-bold text-info">
-
           </li>
         </ul>
       </div>
