--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,9 @@ background-color:rgba(255, 255, 255, 10%);
 .konten{
     min-height: 450px;
 }
+.btn.btn-sm {
+    padding: 0.5rem 0.6rem !important;
+    font-size: 0.44rem;
+    margin-top: -5px;
+    margin-bottom: -4px;
+}
