--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -9,7 +9,7 @@
           <!-- Default form contact -->
           <div class="card">
             <div class="card-body">
-              <form>
+              <!-- <form> -->
                 <table class="table table-sm table-striped table-hover table-bordered" style="height:25px; text-align:center;">
                   <thead class="thead-light">
                     <tr>
@@ -30,17 +30,17 @@
                       <td>{{record.KodeDept}}</td>
                       <td>
                           <!-- <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a> -->
-                        <a class="btn-sm" mdbBtn color="default" title="Lihat Data" href="/tabelbarang/view/{{this.id}}">
+                        <button class="btn-sm" mdbBtn color="default" title="Lihat Data" (click)="bukaModal()" >
                           <span>Lihat</span>
-                        </a>
+                        </button>
                         <span style="margin:3px"></span>
-                        <a class="btn-sm" mdbBtn color="default" title="Rubah Data" href="/tabelbarang/update/{{this.id}}">
+                        <!-- <a class="btn-sm" mdbBtn color="default" title="Rubah Data" href="/tabelbarang/update/{{this.id}}">
                           <span>Ubah</span>
                         </a>
                         <span style="margin:3px"></span>
                         <a class="btn-sm" mdbBtn color="default" title="Hapus Data" data-toggle="confirmation" href="tabelbarang/delete/{{this.id}}">
                           <span>Hapus</span>
-                        </a>
+                        </a> -->
                       </td>
                     </tr>
                   </thead>
@@ -48,7 +48,7 @@
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-primary btn-rounded">Keluar</button>
                 </div>
-              </form>
+              <!-- </form> -->
             </div>
           </div>
           <br>
@@ -57,3 +57,28 @@
     </div>
   </div>
 </div>
+
+
+
+<!--bagian modal untuk pesan login-->
+<div mdbModal #basicModal="mdbModal" class="modal fade modal-notify modal-danger" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+      <!--Content-->
+      <div class="modal-content text-center">
+        <!--Header-->
+        <div class="modal-header d-flex justify-content-center">
+          <p class="heading"></p>
+        </div>
+        <!--Body-->
+        <div class="modal-body">
+            <app-view-kontrol-user></app-view-kontrol-user>
+        </div>
+        <!--Footer-->
+        <div class="modal-footer justify-content-center">
+          <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a>
+        </div>
+      </div>
+      <!--/.Content-->
+    </div>
+  </div>
+  <!--Bagian modal untuk pesan login-->
