--- a/src/app/usermaintenance/kontrol-user/view/view-kontrol-user/view-kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/view/view-kontrol-user/view-kontrol-user.component.html
@@ -1,10 +1,10 @@
-<!--Main layout-->
-<div class="m-3 h-100">
+<!--  Main layout
+<div class="m-3 h-100"> -->
   <!-- Start your project here-->
-  <div id="outer" class="d-flex flex-column">
+  <!-- <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Melihat Data Kontrol User</h5>
+        <h5>Melihat Data Kontrol User</h5> --> -->
 
         <mdb-card>
           <mdb-card-body>
@@ -30,13 +30,13 @@
               <label class="col-2 col-form-label  font-weight-bold">Login Terakhir</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
               <div class="col-3 form-inline">
-                <div class="input-group">
+                <!-- <div class="input-group">
                   <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
                   <mat-datepicker #picker></mat-datepicker>
                   <div class="input-group-append">
                     <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <!--input 3-->
@@ -45,13 +45,13 @@
               <label class="col-2 col-form-label  font-weight-bold">Logout Terakhir</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
               <div class="col-3 form-inline">
-                <div class="input-group">
+                <!-- <div class="input-group">
                   <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
                   <mat-datepicker #picker></mat-datepicker>
                   <div class="input-group-append">
                     <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <!--input 4-->
@@ -76,10 +76,10 @@
             </div>
           </mdb-card-body>
         </mdb-card>
-
+<!-- 
         <span style="height: 10vh;"></span>
       </div>
     </div>
   </div>
 
-</div>
+</div> -->
