--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -30,7 +30,7 @@
                       <td>{{record.KodeDept}}</td>
                       <td>
                           <!-- <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">OK</a> -->
-                        <a class="btn-sm" mdbBtn color="default" title="Lihat Data" href="/tabelbarang/view/{{this.id}}">
+                        <a class="btn-sm waves-effect" mdbBtn color="default" title="Lihat Data" mdbWavesEffect data-dismiss="modal" (click)="basicModal.hide()">
                           <span>Lihat</span>
                         </a>
                         <span style="margin:3px"></span>
